--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <source src='./public/rick.mp3' type='audio/mpeg'>
           </audio>
           <button onClick='audio()' class='btn btn-primary mx-auto col-7 mt-10 fs-5' id='play-button' type='button'>Müzik Dinle</button>
-          <footer>Forum Projem <a class='link' target='_blank' href='https://UstaGamer.com'>UstaGamer.com</a>.</footer>
+          <footer>Bana <a class='link' target='_blank' href='https://instagram.com/Semoizm'>instagram'dan</a> ulaşabilirsin.</footer>
         </div>
     </div>
   </div>
